Interim commit. Not functional

--- a/libero/configs/config.yaml
+++ b/libero/configs/config.yaml
@@ -21,4 +21,4 @@ task_embedding_format: "bert"
 task_embedding_one_hot_offset: 1
 pretrain: false
 pretrain_model_path: ""
-benchmark_name: "miniset_3"
+benchmark_name: "my_new_rob_set"
