--- a/libero/configs/eval/MyEval.yaml
+++ b/libero/configs/eval/MyEval.yaml
@@ -1,8 +1,8 @@
 load_path: "" # only used when separately evaluating a pretrained model
-eval: true
+eval: false
 batch_size: 64
 num_workers: 4
-n_eval: 10
+n_eval: 1
 eval_every: 5
 max_steps: 2000
 use_mp: true
