--- a/libero/configs/MyConfig.yaml
+++ b/libero/configs/MyConfig.yaml
@@ -21,5 +21,5 @@ task_embedding_format: "bert"
 task_embedding_one_hot_offset: 1
 pretrain: false
 pretrain_model_path: ""
-benchmark_name: "miniset_1"
+benchmark_name: "miniset_1"#"libero_10"
 robots: ["Panda"]
